# cubbit-horcrux

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
UnitTest/: CMakeLists.txt
UnitTest/src/: enc_dec_tests.cpp  file_split_merge_tests.cpp
include/: customexceptions.h  enc_dec.h  file.h  file_split_merge.h
src/: base64.cpp  enc_dec.cpp  file.cpp  file_split_merge.cpp  main.cpp
